<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  android:id="@+id/appwidget"
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="155dp"
  android:layout_height="155dp"
  android:background="@drawable/invoice_widget_background"
  android:padding="@dimen/widget_margin"
  android:theme="@style/ThemeOverlay.CowPaw.AppWidgetContainer">

  <LinearLayout
    android:id="@+id/widget_heading"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="fill_horizontal">
    <TextView
      android:id="@+id/appwidget_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/appwidget_text"
      android:text="@string/app_name"
      android:fontFamily="@font/zillaslab_bold"
      android:textColor="@color/backgroundColor"
      android:textSize="16sp"
      android:gravity="start"
    />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:gravity="end">
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/appwidget_text"
        android:text="@string/cow_emoji"
        android:textColor="@color/backgroundColor"
        android:textSize="16sp"
        android:gravity="end"
      />
    </LinearLayout>

  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_alignParentBottom="true">
    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/widget_default_currency"
      android:textSize="17sp"
      android:textStyle="bold"
      android:fontFamily="@font/raleway_regular"
      android:textColor="@color/widget_invoice_currency"/>
    <TextView
      android:id="@+id/invoice_widget_amount"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/widget_default_amount"
      android:textSize="24sp"
      android:textStyle="normal"
      android:textColor="@color/widget_invoice_amount" />
  </LinearLayout>
</RelativeLayout>